# Sentinel

./: CMakeLists.txt  README
include/fw/: fw_core.h  fw_gauss.h  fw_glutil.h  fw_hash.h  fw_math.h  fw_math_base.h  fw_mesh.h  fw_random.h  fw_vec3.h  fw_vec3_array.h  fw_vec3f.h  fw_vec3f_array.h
src/app/: CMakeLists.txt  dlcode.c  dlcode.h  hello.c  test_dl.c  test_hash.c  test_mesh.c  test_opencl.c  test_renderer_interface.c  test_sdl.c  test_vec3.c  test_vec3_array.c
src/fw/: CMakeLists.txt  fw_core.c  fw_gauss.c  fw_glutil.c  fw_hash.c  fw_math_base.c  fw_mesh.c  fw_random.c  fw_vec3.c  fw_vec3_array.c  fw_vec3f.c  fw_vec3f_array.c
